udemy/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: myapp
    type: frontend
spec:
  containers:
    - name: nginx-container
      image: nginx
