udemy/service-loadbalancer-def.yml
apiVersion: v1
kind: Service
metadata:
    name: myapp-service
spec:
    type: LoadBalancer
    ports:
     -  targetPort: 80
        port: 80
        nodePort: 30008
    selector:
        app: myapp
        type: front-end
